@@ -58,6 +58,10 @@ x2goclient (4.0.1.1-0~x2go1) UNRELEASED; urgency=low
     - Instead of using a hard-code DPI of 96, use local DPI settings for new
       sessions if not explicitly set in session profile (Fixes: #164).
 
+  [ Daniel Lindgren ]
+  * New upstream version (4.0.1.1):
+    - Swedish translation update.
+
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 22 Mar 2013 23:21:11 +0100
 
 x2goclient (4.0.1.0-0~x2go1) unstable; urgency=low
